--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <base href="/"> <!-- needed for Angular HTML 5 mode -->
     <title>Angular Todo</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.js"></script>
     <style type="text/css">
         body {
             padding-top: 70px;
@@ -22,12 +25,14 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/todo">Todo</a></li>
                 <li><a href="/accounts/register">Account</a></li>
+
             </ul>
         </div>
     </nav>
     <div ng-view>
 
     </div>
+
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
 <script src='js/service.js'></script>
